# Sphana

./: .clineignore  .clinerules
libraries/client-handler-lib/: README.md  pyproject.toml
libraries/client-handler-lib/src/python/client_handler/: __init__.py  client_handler.py  error_response.py
libraries/distributed-cache-lib/: .gitignore  README.md  pyproject.toml
libraries/distributed-cache-lib/src/python/distributed_cache/: __init__.py  cache_collection.py  distributed_cache.py  exceptions.py  models.py
libraries/distributed-cache-lib/src/python/distributed_cache/cluster/: __init__.py  cluster_nodes_provider.py  coordinator.py  node_registry.py
libraries/distributed-cache-lib/src/python/distributed_cache/locking/: __init__.py  lock_handle.py  lock_manager.py
libraries/distributed-locker-lib/: README.md  pyproject.toml
libraries/managed-exceptions-lib/: README.md  pyproject.toml
libraries/managed-exceptions-lib/src/python/managed_exceptions/: __init__.py  error_details.py  managed_exception.py
libraries/request-handler-lib/: .gitignore  README.md  pyproject.toml
libraries/request-handler-lib/src/python/request_handler/: __init__.py  managed_exception.py  request_handler.py  request_thread_pool.py
services/sphana-data-store-service/: README.md  pyproject.toml
services/sphana-data-store-service/src/docker/: DockerFile  Dockerfile-CUDA12.8
services/sphana-data-store-service/src/python/sphana_data_store/: __main__.py
services/sphana-data-store-service/src/resources/configs/: default.yaml
services/sphana-rag-service/: .gitignore  README.md  pyproject.toml
services/sphana-rag-service/src/docker/: DockerFile  Dockerfile-CUDA12.8
services/sphana-rag-service/src/python/sphana_rag/: __main__.py
services/sphana-rag-service/src/resources/configs/: default.yaml  nodes.txt
services/sphana-rag-service/src/resources/models/: .gitkeep
services/sphana-rag-service/tests/: test_tokenizer.py
services/sphana-store-service/: README.md  pyproject.toml
services/sphana-store-service/src/docker/: DockerFile  Dockerfile-CUDA12.8
services/sphana-store-service/src/python/sphana_store/: __main__.py
services/sphana-trainer/: .gitignore  Makefile  README.md  commands.txt  pyproject.toml  requirements.txt
services/sphana-trainer/configs/embedding/: base.yaml  wiki.yaml
services/sphana-trainer/configs/export/: base.yaml  wiki.yaml
services/sphana-trainer/configs/gnn/: base.yaml  wiki.yaml
services/sphana-trainer/configs/ingest/: base.yaml  wiki-calibration.json  wiki.yaml
services/sphana-trainer/configs/relation/: base.yaml  wiki.yaml
services/sphana-trainer/data/public/: embedding_samples.jsonl  gnn_samples.jsonl  relation_samples.jsonl
services/sphana-trainer/data/wiki/: docs.jsonl
services/sphana-trainer/docs/: index.html  script.js  styles.css
services/sphana-trainer/manifests/: model-manifest.schema.json
services/sphana-trainer/samples/: ai-ml-wiki-titles.small.txt
services/sphana-trainer/samples/large/: 03-molecular-biology.txt  04-computer-science.txt  05-astronomy.txt  08-ecology.txt  09-geology.txt  10-materials-science.txt  100-literature.txt  11-economics.txt  12-psychology.txt  13-sociology.txt  16-world-history.txt  17-linguistics.txt  19-statistics.txt  22-microbiology.txt  23-virology.txt  24-pharmacology.txt  25-medicine.txt  26-human-anatomy.txt  27-physiology.txt  29-oncology.txt  32-surgery.txt  33-radiology.txt  35-epidemiology.txt  36-public-health.txt  37-nutrition.txt  38-sports-science.txt  42-cryptography.txt  44-climate-science.txt  46-astrophysics.txt  48-software-engineering.txt  49-renewable-energy.txt  50-cognitive-neuroscience.txt  51-data-science.txt  52-virology.txt  53-paleontology.txt  54-archaeology.txt  57-meteorology.txt  58-seismology.txt  59-anthropology.txt  62-botany.txt  (+20 more)
services/sphana-trainer/samples/medium/: ai-ml-wiki-titles.medium.txt
services/sphana-trainer/samples/wiki-titles/large/: 01-quantum-physics.txt  06-neuroscience.txt  07-immunology.txt  18-mathematics.txt  20-biochemistry.txt  21-genetics.txt  34-pathology.txt  40-electrical-engineering.txt  43-robotics.txt  45-pharmacology.txt  47-marine-biology.txt  60-oceanography.txt  64-entomology.txt  66-aerospace-engineering.txt  72-epidemiology.txt  78-thermodynamics.txt  79-control-systems.txt  85-agricultural-science.txt  87-food-science.txt  89-biomedical-engineering.txt  96-law.txt
services/sphana-trainer/samples/wiki-titles/medium/: ai-ml-wiki-titles.medium.txt
services/sphana-trainer/samples/wiki-titles/small/: ai-ml-wiki-titles.small.txt
services/sphana-trainer/schemas/datasets/: relation.schema.json
services/sphana-trainer/schemas/ingestion/: chunks.schema.json
services/sphana-trainer/src/sphana_trainer/: __init__.py  cli.py  config.py
services/sphana-trainer/src/sphana_trainer/artifacts/: __init__.py
services/sphana-trainer/src/sphana_trainer/data/: dataset_builder.py  embedding_dataset.py  pipeline.py  relation_dataset.py
services/sphana-trainer/src/sphana_trainer/exporters/: onnx.py
services/sphana-trainer/src/sphana_trainer/models/: __init__.py
services/sphana-trainer/src/sphana_trainer/tasks/: __init__.py  base.py  embedding.py  export.py  gnn.py  ingest.py  package.py
services/sphana-trainer/src/sphana_trainer/training/: gnn.py  profiling.py  relation.py
services/sphana-trainer/src/sphana_trainer/utils/: __init__.py  fingerprint.py  metadata.py  metrics.py  mlflow.py  paths.py  seed.py  telemetry.py
services/sphana-trainer/src/sphana_trainer/workflow/: state.py
services/sphana-trainer/src/tests/data/embedding/: train.jsonl  (+1 more)
services/sphana-trainer/src/tests/e2e/: test_full_pipeline.py
services/sphana-trainer/src/tests/integration/: test_ingestion_pipeline.py
services/sphana-trainer/src/tests/unit/: test_artifacts_cli.py  test_cli.py  test_config.py  test_distributed.py  test_exporters.py  test_mlflow_logger.py  test_models.py  test_paths.py  test_pipeline.py  test_profiling.py  test_tasks.py  test_utils.py  test_workflow_state.py
utils/models-exporter-util/: README.md  __main__.py  pyproject.toml
(+730 files in other folders)
