[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/python/client_handler"]

[project]
name = "client_handler"
version = "1.0.0"
description = "Client Handler Library"
requires-python = "==3.12.*"
dependencies = [
    "httpx",
    "pydantic",
    "prometheus-client",
    "managed_exceptions"
]