[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/python/distributed_cache"]

[project]
name = "distributed_cache"
version = "2.0.0"
description = "Distributed Cache Library v2 — Partitioned, Hazelcast-style"
requires-python = "==3.12.*"
dependencies = [
    "msgpack>=1.0",
    "pydantic>=2.0",
]
