[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/python/distributed_locker"]

[project]
name = "distributed_locker"
version = "1.0.0"
description = "Distributed Locker Library"
requires-python = "==3.12.*"
dependencies = [
    "pydantic",
]