[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/python/managed_exceptions"]

[project]
name = "managed_exceptions"
version = "1.0.0"
descriptions = "Managed Exceptions Library"
requires-python = "==3.12.*"
dependencies = [
    "pydantic",
]