[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/python/request_handler"]

[project]
name = "request_handler"
version = "1.0.0"
description = "Request Handler Library"
requires-python = "==3.12.*"
dependencies = [
    "fastapi",
    "pydantic",
    "managed_exceptions",
]