[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/python/sphana_rag"]

[project]
name = "sphana_rag"
version = "1.0.0"
descriptions = "Sphana RAG Service"
requires-python = "==3.12.*"
dependencies = [
    "nuitka",
    "fastapi",
    "pydantic",
    "uvicorn[standard]",
    "managed_exceptions",
    "request_handler"
]