[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/python/sphana_rag"]

[project]
name = "sphana_rag"
version = "1.0.0"
description = "Sphana RAG Service"
requires-python = "==3.12.*"
dependencies = [
    # Compile to C
    "nuitka",
    # Dependency Injection
    "injector",
    "fastapi-injector",
    # APIs
    "fastapi",
    "pydantic",
    "uvicorn[standard]",
    # Embedded Databases
    "rocksdict",
    "faiss-cpu",
    # ML/AI
    "torch",
    "sentence-transformers",
    "transformers",
    "einops",
    "numpy",
    # Others
    "managed_exceptions",
    "request_handler"
]
