[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/python/sphana_rag"]

[project]
name = "sphana_rag"
version = "1.0.0"
description = "Sphana RAG Service"
requires-python = "==3.12.*"
dependencies = [
    # Compile to C
    "nuitka",
    # Dependency Injection
    "injector",
    "fastapi-injector",
    # APIs
    "fastapi",
    "pydantic",
    "uvicorn[standard]",
    # Embedded Databases
    "rocksdict",
    "faiss-cpu",
    # ML/AI
    "torch>=2.7.0,<2.8.0",
    "sentence-transformers",
    "transformers",
    "einops",
    "numpy",
    # Others
    "managed_exceptions",
    "request_handler"
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true  # This prevents uv from using this index for OTHER packages (like numpy)

[tool.uv.sources]
torch = { index = "pytorch-cu128" }