[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/python/models_exporter_util"]

[project]
name = "models-exporter-util"
version = "1.0.0"
description = "Utility for downloading and exporting HuggingFace models for offline use"
requires-python = "==3.12.*"
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "sentence-transformers>=2.2.0",
    "einops",
]
